
plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = 21
targetCompatibility = 21

applicationName = 'AoC'
mainClassName = 'framework.AoC'
version = '0.2020'

applicationDefaultJvmArgs = [
    "-Xmx6G", "-Xms6G", "-XX:+UseParallelGC"
]

repositories {
    mavenLocal()
    jcenter()  // or alternatively: mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:32.0.1-jre'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.1")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.1")
}
